# atlas-entraxes

./: README.md  USER_GUIDE.md  pyproject.toml
atlas/: __init__.py  app.py  config.py  run.py  utils.py
atlas/data/: dept_zones.xlsx  results_by_combo.csv
atlas/scripts/: __init__.py  normalize_dept_zones.py  preview_mapping.py  quick_preview.py
data/: dept_zones_NORMALISE.csv  details.csv
