[tool.poetry]
name = "atlas-entraxes"
version = "0.1.0"
description = "Atlas des entraxes pour serres"
authors = ["apesseu <avicenne.pesseu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^3.2.0"
plotly = "^6.3.0"
pandas = "^2.3.2"
numpy = "^2.3.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.2"
shapely = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
